Fix widths and code wrapping (it was hard to read)

--- a/_sass/_site.scss
+++ b/_sass/_site.scss
@@ -22,7 +22,7 @@ body {
 }
 
 .content-container {
-  max-width: 38rem;
+  max-width: 48rem;
   padding: 2rem 1.3rem;
   margin-left:  auto;
   margin-right: auto;
